--- a/themes/greatermedia/assets/css/sass/components/_breaking-news.scss
+++ b/themes/greatermedia/assets/css/sass/components/_breaking-news.scss
@@ -6,13 +6,13 @@
 		margin: 0 auto; 
 		max-width: 1400px;
 		font-size: 14px;
-		line-height: 20px; 
+		line-height: 22px; 
 		
 		@include bp(small) {
 			overflow: hidden; 
 			text-overflow: ellipsis;
 			white-space: nowrap;
-			height: 20px;
+			height: 22px;
 		}
 		
 		@include bp(medium) {
@@ -35,7 +35,7 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
-		height: 20px;
+		height: 22px;
 		
 		@include bp(small) {
 			display: inline; 
